<resources>
    <string name="app_name">Weather</string>
    <string name="hello_message">Select city name</string>
    <string name="search_button">Show</string>
    <string name="not_found">Not found</string>
    <string name="temperature_key">Temperature:</string>
    <string name="humidity_key">Humidity:</string>
    <string name="pressure_key">Pressure:</string>
    <string name="wind_key">Wind:</string>
    <string name="default_text_view">N/A</string>
    <string name="wind_switch">Wind</string>
    <string name="pressure_switch">Pressure</string>
    <string name="humidity_switch">Humidity</string>
    <string name="city_prompt">Select city</string>
    <string name="pressure_units">mm Hg</string>
    <string name="speed_units">m/s</string>

</resources>
