<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        style="@style/TitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:entries="@array/city_array"
        android:prompt="@string/city_prompt"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterTextView" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSwitch" />

    <Switch
        android:id="@+id/humiditySwitch"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/humidity_switch"
        style="@style/KeyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/citySpinner" />

    <Switch
        android:id="@+id/pressureSwitch"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:text="@string/pressure_switch"
        style="@style/KeyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humiditySwitch" />

    <Switch
        android:id="@+id/windSwitch"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:text="@string/wind_switch"
        style="@style/KeyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>